--- a/src/Styles/Section3.css
+++ b/src/Styles/Section3.css
@@ -1,10 +1,19 @@
 .section {
-    margin: 20px;
+    position: relative;
+    width: 300px;
+    height: 300px;
+    margin: auto;
+    border: 2px solid #000;
+    overflow: hidden;
 }
-.box {
-    width: 100px;
-    height: 100px;
+
+.box-gsap {
+    width: 50px;
+    height: 50px;
     background-color: red;
-    margin-top: 10px;
-    transition: all 0.5s;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 5px;
 }
